fixed overflow & positioning in the display

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
   --main: rgb(34, 73, 156);
   --alt: #e52b50;
   --bg: #ffff;
-  --bg-alt: rgb(224, 224, 224);
+  --bg-alt: rgb(206, 205, 205);
   --border: transparent;
   --text: rgb(61, 61, 61);
+  --text-r: rgb(102, 102, 102);
   --text-alt: #ffff;
 }
 * {
@@ -17,7 +18,7 @@ body {
   width: 100vw;
   height: 100vh;
   background: linear-gradient(to right, rgb(131, 139, 207), rgb(168, 119, 138));
-  padding: 10px;
+  padding: 7px;
 }
 #root {
   display: flex;
@@ -26,7 +27,7 @@ body {
 }
 .pad {
   width: 100%;
-  height: 97.3vh;
+  height: 98vh;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: minmax(50px, auto);
@@ -50,14 +51,11 @@ body {
   font-weight: 600;
   font-size: 2rem;
   color: var(--text);
-  border-radius: 10px;
+  border-radius: 7px;
   cursor: pointer;
   border: 0;
   outline: 0;
   padding: 20px;
-}
-.pad-item:hover {
-  filter: brightness(85%);
 }
 .display {
   width: 100%;
@@ -69,20 +67,28 @@ body {
   cursor: pointer;
   border: 0;
   outline: 0;
-  padding: 30px;
+  padding: 30px 20px;
   grid-area: a;
   background: var(--bg);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 #input{
-  text-align: right;
+  text-align: start;
+  overflow-x: auto;
+}
+#input::-webkit-scrollbar {
+  display: none;
 }
 #output{
   font-size: 1.2rem;
-  color: var(--main);
-  font-weight: 300;
+  color: var(--text-r);
+  text-align: end;
+  overflow-x: auto;
+}
+#output::-webkit-scrollbar {
+  display: none;
 }
 /* .misc {
   grid-area: b;
